--- a/iredmail/samples/my.cnf
+++ b/iredmail/samples/my.cnf
@@ -2,8 +2,8 @@
 # Sample MySQL configuration file. It should be localted at:
 #   /etc/my.cnf
 #
-# Shipped within rhms project:
-#   http://rhms.googlecode.com/
+# Shipped within iRedMail project:
+#   http://iRedMail.googlecode.com/
 #
 
 [mysqld]
