[svn r31] [Extra] Kickstart: Remove ppp, rp-pppoe in basesystem.

--- a/extra/ks/mini.cfg
+++ b/extra/ks/mini.cfg
@@ -1,3 +1,5 @@
+# For more kickstart options, please refer:
+# http://www.redhat.com/docs/manuals/enterprise/RHEL-5-manual/Installation_Guide-en-US/s1-kickstart2-options.html
 # -------------------------------------------
 # Packages.
 # -------------------------------------------
@@ -47,6 +49,9 @@ basesystem
 -dmraid
 -NetworkManager
 -smartmontools
+-ppp
+-rp-pppoe
+-ecryptfs-utils
 #-rhn-client-tools
 #-rhn-check
 #-yum-rhn-plugin
@@ -54,7 +59,6 @@ basesystem
 #-rhn-setup
 -hesiod
 -sendmail
--mdadm
 -ifd-egate
 -pcsc-lite
 -gpm
