[svn r303] [Extra] Add man, man-pages in kickstart files.

--- a/extra/ks/mini_plus_gnome.cfg
+++ b/extra/ks/mini_plus_gnome.cfg
@@ -116,9 +116,14 @@ basesystem
 # ------------------------
 # Tools.
 # ------------------------
+man
+man-pages
 createrepo
 lynx
 wget
+mailx
+openssh-server
+crontabs
 
 # ------------------------
 # GCC tools.
