[svn r320] [iRedMail]     * Add 'default-character-set=utf8' in my.cnf.

--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -36,6 +36,9 @@ thread_concurrency = 4
 set-variable = max_connections=1000
 set-variable = max_connect_errors=150
 
+[client]
+default-character-set=utf8
+
 [mysql.server]
 user=mysql
 basedir=/var/lib
