--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -12,29 +12,24 @@ port            = 3306
 default-character-set = utf8
 datadir=/var/lib/mysql
 socket=/var/lib/mysql/mysql.sock
+user=mysql
 
 # Default to using old password format for compatibility with mysql 3.x
 # clients (those using the mysqlclient10 compatibility package).
 old_passwords=1
 
 skip-locking
+skip-bdb
 #skip-networking
 
-key_buffer = 256M
-max_allowed_packet = 1M
-table_cache = 256
-sort_buffer_size = 1M
-read_buffer_size = 1M
-read_rnd_buffer_size = 4M
-myisam_sort_buffer_size = 64M
-thread_cache_size = 8
-query_cache_size= 16M
+query-cache-type = 1
+query-cache-size = 64M
+query_cache_limit = 10M
 
-# Try number of CPU's*2 for thread_concurrency
-thread_concurrency = 4
+thread_cache_size=8
 
-set-variable = max_connections=1000
-set-variable = max_connect_errors=150
+#set-variable = max_connections=1000
+#set-variable = max_connect_errors=150
 
 [client]
 default-character-set=utf8
