[svn r431] [Extra] Sync kickstart files.

--- a/extra/ks/mini.cfg
+++ b/extra/ks/mini.cfg
@@ -3,7 +3,7 @@
 # -------------------------------------------
 # Packages.
 # -------------------------------------------
-%packages
+%packages --resolvedeps --excludedocs
 basesystem
 -rmt
 -dump
@@ -115,6 +115,7 @@ basesystem
 -talk
 -tcsh
 -telnet
+-exim
 # ------------------------
 # Tools.
 # ------------------------
@@ -126,8 +127,9 @@ lynx
 wget
 mailx
 openssh-server
-openssh-client
+openssh-clients
 crontabs
+yum
 
 # ------------------------
 # GCC tools.
