--- a/extra/ks/mini_plus_gnome.cfg
+++ b/extra/ks/mini_plus_gnome.cfg
@@ -3,7 +3,7 @@
 # -------------------------------------------
 # Packages.
 # -------------------------------------------
-%packages
+%packages --resolvedeps --excludedocs
 basesystem
 -rmt
 -dump
@@ -113,6 +113,7 @@ basesystem
 -talk
 -tcsh
 -telnet
+-exim
 # ------------------------
 # Tools.
 # ------------------------
@@ -124,8 +125,9 @@ lynx
 wget
 mailx
 openssh-server
-openssh-client
+openssh-clients
 crontabs
+yum
 
 # ------------------------
 # GCC tools.
