[svn r433] [iRedMail] Fix SquirrelMail extract issue. [Extra] Sync mini.cfg, remove mini_plus_gnome.cfg.

--- a/extra/ks/mini.cfg
+++ b/extra/ks/mini.cfg
@@ -7,13 +7,10 @@
 basesystem
 -rmt
 -dump
--acl
 -amtu
 -anacron
 -acpid
 -apmd
--at
--redhat-lsb
 -atk
 -gtk2
 -GConf2
@@ -87,7 +84,6 @@ basesystem
 -ypbind
 -yp-tools
 -quota
--lsof
 -irqbalance
 -system-config-securitylevel-tui
 -crash
@@ -119,6 +115,8 @@ basesystem
 # ------------------------
 # Tools.
 # ------------------------
+acl
+at
 ntp
 man
 man-pages
@@ -128,8 +126,12 @@ wget
 mailx
 openssh-server
 openssh-clients
+vixie-cron
 crontabs
 yum
+dialog
+which
+vim-minimal
 
 # ------------------------
 # GCC tools.
