[svn r507] [iRedMail] +    * Enable SSL support for MySQL.

--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -31,6 +31,11 @@ thread_cache_size=8
 #set-variable = max_connections=1000
 #set-variable = max_connect_errors=150
 
+#ssl-ca =
+#ssl-cert =
+#ssl-key =
+#ssl-cipher = ALL
+
 [client]
 default-character-set=utf8
 
