[svn r508] [iRedMail] Adjust variables for openssl command.

--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -19,8 +19,8 @@ user=mysql
 old_passwords=1
 
 skip-locking
-skip-bdb
-#skip-networking
+#skip-bdb
+skip-networking
 
 query-cache-type = 1
 query-cache-size = 64M
