[svn r600] [iRedOS]     * Typo in ks file.     * More details of iRedOS CDROM directory structure.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -11,6 +11,12 @@ interactive
 # complete.
 #autostep --autoscreenshot
 
+# Install OS instead of upgrade
+install
+
+# Installation method.
+cdrom
+
 # For RHEL 5.x
 #key --skip
 
@@ -26,9 +32,6 @@ lang en_US
 # Installation logging level: debug, info, warning, error, critical.
 logging --level=debug
 
-# Installation method.
-cdrom
-
 # SELinux configuration
 selinux --disabled
 
@@ -38,15 +41,12 @@ selinux --disabled
 # System timezone
 #timezone  Asia/Hong_Kong
 
-# Install OS instead of upgrade
-install
-
 # Use graphical/text install
 graphical
 
 # Enable/Disable services, seperated by comma.
 # Options: --enabled/disabled
-services --enabled=network
+#services --enabled=network
 
 # -------------------
 # ---- Test only ----
@@ -67,7 +67,7 @@ services --enabled=network
 #firstboot --disable
 
 # Network information
-network --bootproto=dhcp --device=eth0 --onboot=on
+#network --bootproto=dhcp --device=eth0 --onboot=on
 
 # Disk partitioning information
 #part swap --bytes-per-inode=4096 --fstype="swap" --size=512
