[svn r601] [iRedOS] Add iredmail url.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -1,5 +1,6 @@
 #
-# Kickstart file used to customize iRedOS.
+# Kickstart file used to customize iRedOS. Provided by iRedMail project:
+# http://code.google.com/p/iredmail/
 #
 
 # NOTE: This is useful for interactive installation, such network and
