[svn r606] [iRedOS]     * Add missing package: dos2unix, at, binutils, libtool-ltdl, gettext,       libXi, libXext, libX11, libXau, libSM, libICE, pax, cups, ed, m4,       libXt, libXdmcp, xorg-x11-filesystem.     * Fix kickstart issue, user can set network setting and hostname by       their own.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -40,7 +40,7 @@ selinux --disabled
 #skipx
 
 # System timezone
-#timezone  Asia/Hong_Kong
+timezone  Asia/Hong_Kong
 
 # Use graphical/text install
 graphical
@@ -65,10 +65,10 @@ graphical
 #rootpw --iscrypted $1$h7EtIFv4$R9JQ4aCOVN7E9ml3A2SXv.
 
 # Run the Setup Agent on first boot
-#firstboot --disable
+firstboot --disable
 
 # Network information
-#network --bootproto=dhcp --device=eth0 --onboot=on
+network --bootproto=query
 
 # Disk partitioning information
 #part swap --bytes-per-inode=4096 --fstype="swap" --size=512
@@ -81,7 +81,7 @@ graphical
 # -------------------------------------------
 # Packages.
 # -------------------------------------------
-%packages --resolvedeps --excludedocs
+%packages --excludedocs
 basesystem
 -rmt
 -dump
