[svn r615] [iRedOS] Sync.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -47,7 +47,7 @@ graphical
 
 # Enable/Disable services, seperated by comma.
 # Options: --enabled/disabled
-#services --enabled=network
+services --enabled=network
 
 # -------------------
 # ---- Test only ----
@@ -68,7 +68,7 @@ graphical
 firstboot --disable
 
 # Network information
-network --bootproto=query
+network --bootproto=query --hostname='iredos.iredmail.org' --noipv6 --onboot=yes
 
 # Disk partitioning information
 #part swap --bytes-per-inode=4096 --fstype="swap" --size=512
@@ -245,6 +245,9 @@ export PATH="/usr/kerberos/sbin:/usr/kerberos/bin:/usr/local/sbin:/usr/local/bin
 #hostname "${HOSTNAME}"
 #echo "127.0.0.1 ${HOSTNAME}" >> /etc/hosts
 #perl -pi -e 's/(HOSTNAME=).*/${1}$ENV{HOSTNAME}/' /etc/sysconfig/network
+
+# Get hostname from file.
+export HOSTNAME="$(grep '^HOSTNAME' /etc/sysconfig/network | awk -F'=' '{print $2}')"
 
 # Copy /etc/skel/.*
 cd /etc/skel/
