[svn r620] [iRedOS]     * Use default logging level in kickstart for speed up.     * Fix iredos installation failed in VMware ESX server.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -31,7 +31,7 @@ keyboard us
 lang en_US
 
 # Installation logging level: debug, info, warning, error, critical.
-logging --level=debug
+#logging --level=debug
 
 # SELinux configuration
 selinux --disabled
@@ -274,6 +274,9 @@ elif [ -e /dev/hdc ]; then
 elif [ -e /dev/scd0 ]; then
     # SATA/SCSI hard disk.
     mount /dev/scd0 /mnt
+elif [ -e /dev/hda ]; then
+    # CD-ROM device in VMware ESX server.
+    mount /dev/hda /mnt
 else
     echo "Error: CD-ROM device not found."
     exit 255
