[svn r621] [iRedOS]     * Improve kickstart %post macro.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -5,12 +5,7 @@
 
 # NOTE: This is useful for interactive installation, such network and
 # hostname configure.
-interactive
-
-# Take a screenshot at every step during installation and copy the
-# images over to /root/anaconda-screenshots after installation is
-# complete.
-#autostep --autoscreenshot
+#interactive
 
 # Install OS instead of upgrade
 install
@@ -37,10 +32,10 @@ lang en_US
 selinux --disabled
 
 # Do not configure the X Window System
-#skipx
+skipx
 
 # System timezone
-timezone  Asia/Hong_Kong
+#timezone  Asia/Hong_Kong
 
 # Use graphical/text install
 graphical
@@ -240,6 +235,10 @@ dos2unix
 # Set PATH.
 export PATH="/usr/kerberos/sbin:/usr/kerberos/bin:/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/root/bin"
 
+# Get CD/DVD-ROM device name list.
+export CDROM_LIST="$(dmesg | grep '\(CD\|DVD\)*ROM' | awk -F':' '{print $1}' | grep -v ' ' | sort | uniq)"
+export CDROM_MOUNT_POINT="/mnt"
+
 # Set a random hostname.
 #export HOSTNAME="$RANDOM$RANDOM.iredmail.org"
 #hostname "${HOSTNAME}"
@@ -260,30 +259,33 @@ cp -f .* /root/ >/dev/null 2>&1
 cat > /etc/yum.repos.d/iRedMail.repo <<EOF
 [iRedMail]
 name=iRedMail
-baseurl=file:///mnt/
+baseurl=file://${CDROM_MOUNT_POINT}
 enabled=1
 gpgcheck=0
 EOF
 
-# Mount CD-ROM and copy iRedMail source.
-if [ -e /dev/cdrom ]; then
-    mount /dev/cdrom /mnt
-elif [ -e /dev/hdc ]; then
-    # IDE hard disk.
-    mount /dev/hdc /mnt
-elif [ -e /dev/scd0 ]; then
-    # SATA/SCSI hard disk.
-    mount /dev/scd0 /mnt
-elif [ -e /dev/hda ]; then
-    # CD-ROM device in VMware ESX server.
-    mount /dev/hda /mnt
-else
-    echo "Error: CD-ROM device not found."
-    exit 255
-fi
+# Mount CD-ROM and copy iRedMail source package.
+for dev_cdrom in ${CDROM_LIST}
+do
+    if [ -e /dev/${dev_cdrom} ]; then
+        # Mount CD/DVD-ROM.
+        mount /dev/${dev_cdrom} ${CDROM_MOUNT_POINT}
+
+        if [ X"$?" == X"0" ]; then
+            # Break loop if CD/DVD-ROM mount success.
+            break
+        else
+            # Try to mount next device.
+            continue
+        fi
+    else
+        # Try to mount next device.
+        continue
+    fi
+done
 
 # We need write-access.
-cp -rf /mnt/iRedMail /root/
+cp -rf ${CDROM_MOUNT_POINT}/iRedMail /root/
 
 # Change directory.
 cd /root/iRedMail/
@@ -293,8 +295,6 @@ cd /root/iRedMail/
 #
 
 # Skip some steps.
-# Don't install packages.
-#export status_install_all_pkgs="DONE"
 # Don't disable iredmail repo.
 export status_disable_iredmail_repo="DONE"
 # Don't run freshclam.
@@ -312,7 +312,15 @@ chvt 3
 export YUM='yum --disablerepo=base,updates,addons,extras,centosplus,c5-media --enablerepo=iRedMail'
 
 # Start iRedMail installation.
-sh iRedMail.sh
+# Answer question automatic:
+#   - Use iptables rule file shipped within iRedMail? Y
+#   - Restart iptables now? N
+#   - Use MySQL config file (/etc/my.cnf) shipped within iRedMail? Y
+sh iRedMail.sh <<EOF
+Y
+N
+Y
+EOF
 
 # Clear yum repo metadata.
 yum clean all
@@ -337,4 +345,4 @@ else
 fi
 
 # umount CDROM.
-umount /mnt
+umount ${CDROM_MOUNT_POINT}
