[svn r623] [iRedOS]     * Use iptables rule file and mysql config file which shipped within       iRedMail by default.     * Improve kickstart %post macro, speed up system installation.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -27,6 +27,7 @@ lang en_US
 
 # Installation logging level: debug, info, warning, error, critical.
 #logging --level=debug
+logging --level=critical
 
 # SELinux configuration
 selinux --disabled
