[svn r634] [iRedOS] Sync.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -3,8 +3,7 @@
 # http://code.google.com/p/iredmail/
 #
 
-# NOTE: This is useful for interactive installation, such network and
-# hostname configure.
+# Used for interactive installation.
 #interactive
 
 # Install OS instead of upgrade
@@ -79,6 +78,7 @@ network --bootproto=query --hostname='iredos.iredmail.org' --noipv6 --onboot=yes
 # -------------------------------------------
 %packages --excludedocs
 basesystem
+kernel
 -rmt
 -dump
 -amtu
@@ -189,7 +189,7 @@ basesystem
 -telnet
 -exim
 # ------------------------
-# Tools.
+# Required packages.
 # ------------------------
 ntp
 man
@@ -206,20 +206,6 @@ vim-minimal
 system-config-network-tui
 iptables
 tmpwatch
-
-# ------------------------
-# GCC tools.
-# ------------------------
-#gcc
-#cpp
-#glibc-devel
-#libgomp
-#glibc-headers
-#kernel-headers
-#gcc-c++
-#libstdc++-devel
-
-# Required packages.
 acl
 createrepo
 vixie-cron
@@ -314,10 +300,12 @@ export YUM='yum --disablerepo=base,updates,addons,extras,centosplus,c5-media --e
 
 # Start iRedMail installation.
 # Answer question automatic:
-#   - Use iptables rule file shipped within iRedMail? Y
-#   - Restart iptables now? N
-#   - Use MySQL config file (/etc/my.cnf) shipped within iRedMail? Y
+#   - Y: Continue install packages after complete config.
+#   - Y: Use iptables rule file shipped within iRedMail?
+#   - N: Restart iptables now?
+#   - Y: Use MySQL config file (/etc/my.cnf) shipped within iRedMail?
 sh iRedMail.sh <<EOF
+Y
 Y
 N
 Y
