[svn r636] [iRedOS]     * Make language customized.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -21,8 +21,9 @@ auth  --useshadow  --enablemd5
 # System keyboard
 keyboard us
 
-# System language
-lang en_US
+# System language. It will affect both installation interface and
+# system after installation complete.
+#lang en_US
 
 # Installation logging level: debug, info, warning, error, critical.
 #logging --level=debug
