[svn r640] [iRedOS] Code cleanup.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -227,6 +227,11 @@ export PATH="/usr/kerberos/sbin:/usr/kerberos/bin:/usr/local/sbin:/usr/local/bin
 export CDROM_LIST="$(dmesg | grep '\(CD\|DVD\)*ROM' | awk -F':' '{print $1}' | grep -v ' ' | sort | uniq)"
 export CDROM_MOUNT_POINT="/mnt"
 
+# Repo file.
+export REPOFILE='/etc/yum.repos.d/iRedMail.repo'
+export REPONAME='iRedMail'
+export REPOURL='http://www.iredmail.org/yum/rpms/5/'
+
 # Set a random hostname.
 #export HOSTNAME="$RANDOM$RANDOM.iredmail.org"
 #hostname "${HOSTNAME}"
@@ -244,9 +249,9 @@ cp -f .* /root/ >/dev/null 2>&1
 /sbin/ifconfig lo up
 
 # Create yum repo file for iRedMail.
-cat > /etc/yum.repos.d/iRedMail.repo <<EOF
-[iRedMail]
-name=iRedMail
+cat > ${REPOFILE} <<EOF
+[${REPONAME}]
+name=${REPONAME}
 baseurl=file://${CDROM_MOUNT_POINT}
 enabled=1
 gpgcheck=0
@@ -297,11 +302,11 @@ chvt 3
 #clear
 
 # Skip install packages, but enable services.
-export YUM='yum --disablerepo=base,updates,addons,extras,centosplus,c5-media --enablerepo=iRedMail'
+export YUM="yum --disablerepo=base,updates,addons,extras,centosplus,c5-media --enablerepo=${REPONAME}"
 
 # Start iRedMail installation.
 # Answer question automatic:
-#   - Y: Continue install packages after complete config.
+#   - Y: Continue install packages after configure complete.
 #   - Y: Use iptables rule file shipped within iRedMail?
 #   - N: Restart iptables now?
 #   - Y: Use MySQL config file (/etc/my.cnf) shipped within iRedMail?
@@ -316,10 +321,10 @@ EOF
 yum clean all
 
 # Re-generate yum repo file.
-cat > /etc/yum.repos.d/iRedMail.repo <<EOF
-[iRedMail]
-name=iRedMail
-baseurl=http://www.iredmail.org/yum/rpms/5/
+cat > ${REPOFILE} <<EOF
+[${REPONAME}]
+name=${REPONAME}
+baseurl=${REPOURL}
 enabled=1
 gpgcheck=0
 EOF
