[svn r689] [iRedOS]     * Add 'unzip' in ks file. Thanks shake.chen@gmail.

--- a/iRedOS/iredmail.cfg
+++ b/iRedOS/iredmail.cfg
@@ -200,6 +200,7 @@ wget
 mailx
 openssh-server
 openssh-clients
+unzip
 bzip2
 dhclient
 lftp
@@ -305,7 +306,7 @@ chvt 3
 export YUM="yum --disablerepo=base,updates,addons,extras,centosplus,c5-media --enablerepo=${REPONAME}"
 
 # Start iRedMail installation.
-# Answer question automatic:
+# Answer some questions automatic:
 #   - Y: Continue install packages after configure complete.
 #   - Y: Use iptables rule file shipped within iRedMail?
 #   - N: Restart iptables now?
