[svn r958] [iRedMail] Code cleanup.

--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -1,9 +1,11 @@
 #
 # Sample MySQL configuration file. It should be localted at:
-#   /etc/my.cnf
+#
+#   - RHEL/CentOS:  /etc/my.cnf
+#   - Debian:       /etc/mysql/my.cnf
 #
 # Shipped within iRedMail project:
-#   http://iRedMail.googlecode.com/
+#   http://code.google.com/p/iredmail/
 #
 
 [mysqld]
