[svn r964] iRedMail on Debian: * Make openldap work now. * Make policyd work now.

--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -2,19 +2,18 @@
 # Sample MySQL configuration file. It should be localted at:
 #
 #   - RHEL/CentOS:  /etc/my.cnf
-#   - Debian:       /etc/mysql/my.cnf
 #
 # Shipped within iRedMail project:
 #   http://code.google.com/p/iredmail/
 #
 
 [mysqld]
-bind-address    = 127.0.0.1
-port            = 3306
-default-character-set = utf8
-datadir=/var/lib/mysql
-socket=/var/lib/mysql/mysql.sock
-user=mysql
+bind-address            = 127.0.0.1
+port                    = 3306
+default-character-set   = utf8
+datadir                 = /var/lib/mysql
+socket                  = /var/lib/mysql/mysql.sock
+user                    = mysql
 
 # Default to using old password format for compatibility with mysql 3.x
 # clients (those using the mysqlclient10 compatibility package).
@@ -24,11 +23,11 @@ skip-locking
 #skip-bdb
 #skip-networking
 
-query-cache-type = 1
-query-cache-size = 64M
-query_cache_limit = 10M
+query-cache-type    = 1
+query-cache-size    = 64M
+query_cache_limit   = 10M
 
-thread_cache_size=8
+thread_cache_size   = 8
 
 #set-variable = max_connections=1000
 #set-variable = max_connect_errors=150
@@ -42,9 +41,9 @@ thread_cache_size=8
 default-character-set=utf8
 
 [mysql.server]
-user=mysql
-basedir=/var/lib
+user        = mysql
+basedir     = /var/lib
 
 [mysqld_safe]
-log-error=/var/log/mysqld.log
-pid-file=/var/run/mysqld/mysqld.pid
+log-error   = /var/log/mysqld.log
+pid-file    = /var/run/mysqld/mysqld.pid
