Make several programs not listen to localhost only.

--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -8,7 +8,7 @@
 #
 
 [mysqld]
-bind-address            = 127.0.0.1
+#bind-address            = 127.0.0.1
 port                    = 3306
 default-character-set   = utf8
 datadir                 = /var/lib/mysql
