* Add script (tools/clear_iredmail.sh) to remove main components installed by iRedMail. * Do not configure 'AddDefaultCharset' in apache.

--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -42,6 +42,7 @@ skip-locking
 #skip-networking
 
 query-cache-type    = 1
+# Use up to 64Mb of RAM to store query results.
 query-cache-size    = 64M
 query_cache_limit   = 10M
 
