--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -48,7 +48,7 @@ query_cache_limit   = 10M
 
 thread_cache_size   = 8
 
-#set-variable = max_connections=1000
+set-variable = max_connections=512
 #set-variable = max_connect_errors=150
 
 #ssl-ca =
