Oops, don't enable spam quarantining (sql:) in Amavisd by default since we don't have tool to manage it.

--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -33,6 +33,9 @@ datadir                 = /var/lib/mysql
 socket                  = /var/lib/mysql/mysql.sock
 user                    = mysql
 
+#log = /var/log/mysql.log
+#log-slow-queries
+
 # Default to using old password format for compatibility with mysql 3.x
 # clients (those using the mysqlclient10 compatibility package).
 old_passwords=1
