Add sample mysql setting in my.cnf: innodb_buffer_pool_size.

--- a/iRedMail/samples/my.cnf
+++ b/iRedMail/samples/my.cnf
@@ -54,6 +54,18 @@ thread_cache_size   = 8
 set-variable = max_connections=1024
 #set-variable = max_connect_errors=150
 
+# If you got error message like "The total number of locks exceeds the lock table size",
+# please try to increase 'innodb_buffer_pool_size' to a reasonable value.
+# Restarting MySQL server is required to make new value work.
+# You can get current value with SQL command:
+#
+#   mysql> SHOW ENGINE INNODB STATUS \G
+#          [...]
+#          Buffer pool size   512
+#          [...]
+#
+#set-variable=innodb_buffer_pool_size=512M
+
 #ssl-ca =
 #ssl-cert =
 #ssl-key =
