Remove procmail, we didn't actually use it before.

--- a/iRedMail/samples/conf/dovecot2.conf
+++ b/iRedMail/samples/conf/dovecot2.conf
@@ -30,7 +30,7 @@ auth_verbose_passwords = no
 # SSL: Global settings.
 # Refer to wiki site for per protocol, ip, server name SSL settings:
 # http://wiki2.dovecot.org/SSL/DovecotConfiguration
-ssl = PH_SSL
+ssl = PH_ENABLE_SSL
 verbose_ssl = no
 ssl_cert = PH_SSL_CERT
 ssl_key = PH_SSL_KEY
@@ -104,14 +104,15 @@ plugin {
     expire_dict = proxy::expire
 
     # Managesieve.
-    sieve = PH_SIEVE_DIR/sieve/%Ld/%Ln/PH_SIEVE_RULE_FILENAME
+    sieve = PH_SIEVE_DIR/%Ld/%Ln/PH_SIEVE_RULE_FILENAME
 }
 
 service quota-warning {
     executable = script PH_QUOTA_WARNING_SCRIPT
     # use some unprivileged user for executing the quota warnings
     user = PH_QUOTA_WARNING_USER
-    unix_listener quota-warning {}
+    unix_listener quota-warning {
+    }
 }
 
 dict {
@@ -122,7 +123,7 @@ protocol lda {
     mail_plugins = quota sieve autocreate
     auth_socket_path = /var/run/dovecot/auth-master
     log_path = /var/log/sieve.log
-    #sieve_global_path = PH_GLOBAL_SIEVE_FILE
+    sieve_global_path = PH_GLOBAL_SIEVE_FILE
     postmaster_address = root
 }
 protocol imap {
