It now works on CentOS 6.0, RHEL 6.x, Scientific Linux 6.x.

--- a/iRedMail/samples/conf/dovecot2.conf
+++ b/iRedMail/samples/conf/dovecot2.conf
@@ -103,27 +103,47 @@ plugin {
     expire = Trash 7 Trash/* 7 Junk 30
     expire_dict = proxy::expire
 
-    # Managesieve.
+    # Pigeonhole managesieve service.
+    # Reference: http://wiki2.dovecot.org/Pigeonhole/Sieve/Configuration
+    # Per-user sieve settings.
     sieve = PH_SIEVE_DIR/%Ld/%Ln/PH_SIEVE_RULE_FILENAME
+    #sieve_dir =
+
+    # Global sieve settings.
+    sieve_global_path = PH_GLOBAL_SIEVE_FILE
+    #sieve_global_dir =
+    #sieve_before =
+    #sieve_after =
 }
 
 service quota-warning {
     executable = script PH_QUOTA_WARNING_SCRIPT
-    # use some unprivileged user for executing the quota warnings
-    user = PH_QUOTA_WARNING_USER
     unix_listener quota-warning {
+        user = PH_QUOTA_WARNING_USER
+        group = PH_QUOTA_WARNING_GROUP
+        mode = 0660
+    }
+}
+
+service dict {
+    unix_listener dict {
+        mode = 0660
+        user = PH_SERVICE_DICT_USER
+        group = PH_SERVICE_DICT_GROUP
     }
 }
 
 dict {
     expire = db:/var/lib/dovecot/expire/expire.db
+    quotadict = PH_DOVECOT_REALTIME_QUOTA_SQLTYPE:PH_DOVECOT_REALTIME_QUOTA_CONF
 }
 
 protocol lda {
+    # Reference: http://wiki2.dovecot.org/LDA
     mail_plugins = quota sieve autocreate
     auth_socket_path = /var/run/dovecot/auth-master
     log_path = /var/log/sieve.log
-    sieve_global_path = PH_GLOBAL_SIEVE_FILE
+    lda_mailbox_autocreate = yes
     postmaster_address = root
 }
 protocol imap {
