Restarting iptables before Fail2ban. Enable sieve_dir, sieve_global_dir in dovecot2. Update iRedAdmin to 0.1.6.

--- a/iRedMail/samples/conf/dovecot2.conf
+++ b/iRedMail/samples/conf/dovecot2.conf
@@ -106,12 +106,12 @@ plugin {
     # Pigeonhole managesieve service.
     # Reference: http://wiki2.dovecot.org/Pigeonhole/Sieve/Configuration
     # Per-user sieve settings.
+    sieve_dir = PH_SIEVE_DIR/%Ld/%Ln
     sieve = PH_SIEVE_DIR/%Ld/%Ln/PH_SIEVE_RULE_FILENAME
-    #sieve_dir =
 
     # Global sieve settings.
+    sieve_global_dir = PH_SIEVE_DIR
     sieve_global_path = PH_GLOBAL_SIEVE_FILE
-    #sieve_global_dir =
     #sieve_before =
     #sieve_after =
 }
